# homoiconic

./: .gitignore  .travis.yml  Algebra.hs  Algebra2.hs  Algebra4.hs  Algebra7.hs  Algebra8.hs  Bug1.hs  Category.hs  Functor.hs  Functor2.hs  LICENSE  Lattice.hs  LocalPrelude.hs  Normal.hs  README.md  REAMDE  Tests.hs  Topology1.hs  Topology2.hs  Topology3.hs  Union.hs  homoiconic.cabal  stack.yaml
examples/: Constrained.hs  Heterogeneous.hs  Homogeneous.hs
old/: Algebra2.hs  Algebra3.hs  Algebra5.hs  Algebra6.hs  Algebra7.hs  Algebra8.hs  Bug1.hs  Bug2.hs  Bug3.hs  Category.hs  LocalPrelude.hs  Tests.hs  Topology3.hs  Union.hs
paper/: paper.tex
src/: FAlgebra.hs  FAlgebra98.hs  FAlgebra98Example.hs  FAlgebraExample.hs  HomPrelude.hs  Lattice.hs  Spatial98.hs  TemplateHaskellUtils.hs  Topology.hs
src/Common/: TH.hs
src/Constrained/: Example.hs  ExamplePrelude.hs  FAlgebra.hs  TH.hs
src/Heterogeneous/: Example.hs  ExamplePrelude.hs  FAlgebra.hs  TH.hs  Variety.hs
src/Homogeneous/: Example.hs  FAlgebra.hs  PreludeInstances.hs  Spatial98.hs  TH.hs  Variety.hs
src/Homoiconic/: Constrained.hs  Heterogeneous.hs  Homogeneous.hs
src/Homoiconic/Common/: TH.hs  Tags.hs
src/Homoiconic/Constrained/: Example.hs  TH.hs
src/Homoiconic/Heterogeneous/: Lattice.hs  LocalPrelude.hs  TH.hs  Topology.hs
src/Homoiconic/Homogeneous/: TH.hs
