
name:                homoiconic
version:             0.1.0.0
synopsis:            Convert between Haskell expressions and isomorphic syntax trees at runtime and compile time
-- description:
homepage:            github.com/mikeizbicki/homoiconic
license:             BSD3
license-file:        LICENSE
author:              Mike Izbicki
maintainer:          mike@izbicki.me
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

--------------------------------------------------------------------------------

library
    exposed-modules:
        Homogeneous.FAlgebra
        Heterogeneous.FAlgebra
        Constrained.FAlgebra

    other-modules:
        Homogeneous.TH
        Heterogeneous.TH
        Constrained.TH
        Common.TH

    extensions:
        UndecidableSuperClasses,
        ImplicitParams,
        TypeInType,
        TypeFamilyDependencies,
        TypeApplications,
        DeriveGeneric,
        AllowAmbiguousTypes,
        TypeFamilies,
        PatternSynonyms,
        ViewPatterns,
        DefaultSignatures,
        RankNTypes,
        TemplateHaskell,
        NoRebindableSyntax,
        TypeOperators,
        TupleSections,
        StandaloneDeriving,
        ScopedTypeVariables,
        MultiParamTypeClasses,
        FlexibleInstances,
        GADTs,
        UndecidableInstances,
        ConstraintKinds,
        FlexibleContexts,
        CPP,
        PatternSynonyms,
        DataKinds

    build-depends:
        base,
        template-haskell
--         tasty,
--         tasty-smallcheck,
--         tasty-quickcheck,
--         QuickCheck

    ghc-options:
        -O

--         -ddump-to-file
--         -ddump-rule-firings
--         -ddump-rule-rewrites
--         -ddump-rules
--         -ddump-cmm
--         -ddump-simpl-stats
--         -dppr-debug
--         -ddump-simpl
--         -dsuppress-module-prefixes
--         -dsuppress-uniques
--         -dsuppress-idinfo
--         -dsuppress-coercions
--         -dsuppress-type-applications

    hs-source-dirs:
        src

    default-language:
        Haskell2010

--------------------------------------------------------------------------------

Test-Suite homogeneous
    type:       exitcode-stdio-1.0
    main-is:    examples/Homogeneous.hs
    build-depends: base
